--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   webview_flutter: ^4.4.2
+  change_app_package_name: ^1.3.0
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
