--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,6 +71,11 @@ android {
     }
 }
 
+dependencies {
+    implementation "androidx.core:core-ktx:1.13.1"
+    implementation "androidx.activity:activity-ktx:1.9.1"
+}
+
 flutter {
     source = "../.."
 }
