--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+2
+version: 1.0.0+3
 
 environment:
   sdk: '>=3.4.3 <4.0.0'
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   webview_flutter: ^4.4.2
   change_app_package_name: ^1.3.0
+  flutter_native_splash: ^2.4.1
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
