--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   webview_flutter: ^4.4.2
   change_app_package_name: ^1.3.0
   flutter_native_splash: ^2.4.1
+  supabase_flutter: ^2.6.0
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
