--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   change_app_package_name: ^1.3.0
   flutter_native_splash: ^2.4.1
   supabase_flutter: ^2.6.0
+  facebook_app_events: ^0.19.3
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
