--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   flutter_local_notifications: ^17.2.2
   timezone: ^0.9.0
   permission_handler: ^11.1.0
+  firebase_core: ^3.6.0
+  firebase_messaging: ^15.1.3
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
