--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   permission_handler: ^11.1.0
   firebase_core: ^3.6.0
   firebase_messaging: ^15.1.3
+  package_info_plus: ^8.0.3
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
