--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -82,6 +82,9 @@ android {
             // Signing with the debug keys for now, so `flutter run --release` works.
             //signingConfig = signingConfigs.debug
             signingConfig = signingConfigs.release
+            ndk {
+                debugSymbolLevel = 'SYMBOL_TABLE' // or 'FULL'
+            }
         }
     }
 }
