--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   firebase_core: ^3.6.0
   firebase_messaging: ^15.1.3
   package_info_plus: ^8.0.3
+  firebase_crashlytics: ^4.1.3
+  firebase_analytics: ^11.3.3
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
