--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
     <application
+        android:networkSecurityConfig="@xml/network_security_config"
         android:label="PrayU"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon"
