design: 안드로이드 이미지 변경

--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -49,7 +49,7 @@ flutter_native_splash:
   # From Android 12 onwards, the splash screen is handled differently than in previous versions.
   # Please visit https://developer.android.com/guide/topics/ui/splash-screen
   # Following are specific parameters for Android 12+.
-  android_12:
+  # android_12:
   # The image parameter sets the splash screen icon image.  If this parameter is not specified,
   # the app's launcher icon will be used instead.
   # Please note that the splash screen will be clipped to a circle on the center of the screen.
@@ -60,7 +60,7 @@ flutter_native_splash:
   #image: assets/android12splash.png
 
   # Splash screen background color.
-  color: "#B5B8FB"
+  # color: "#B5B8FB"
 
   # App icon background color.
   #icon_background_color: "#111111"
