--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   package_info_plus: ^8.0.3
   firebase_crashlytics: ^4.1.3
   firebase_analytics: ^11.3.3
+  path_provider: ^2.1.5
+  photo_manager: ^3.6.2
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
